--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "nuxt generate && gh-pages --dotfiles -d .output/public"
+    "deploy": "nuxt generate && cd .output/public && touch .nojekyll && cd ../../ && gh-pages --dotfiles -d .output/public"
   },
   "devDependencies": {
     "@nuxt/content": "^2.10.0",
@@ -26,6 +26,7 @@
     "@iconify-json/lucide": "1.1.145",
     "@nuxt/image": "1.1.0",
     "@nuxt/ui": "2.11.1",
+    "nuxt-app": "file:",
     "vue-use-fixed-header": "^2.0.0"
   }
 }
